add notes
